--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@
                         <td rowspan="2"><button class="bt-calc">+</button></td>
                         <td rowspan="2"><button class="bt-calc">=</button></td>
                     </tr>
+
+                    <tr>
+                        <td><button class="bt-calc">0</button></td>
+                        <td><button class="bt-calc">00</button></td>
+                        <td><button class="bt-calc">.</button></td>
+                    </tr>
                 </table>
             </div>
         </main>
