--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculadora Matemática</title>
 
-    <link rel="stylesheet" href="css/styles.css"/>
+    <link rel="stylesheet" href="css/styles.css" />
 
     <script src="tools/jquery/jquery.min.js"></script>
     <script src="js/scripts.js"></script>
@@ -19,7 +19,6 @@
         </header>
 
         <main>
-            <div class="container-table">
                 <table>
                     <tr>
                         <td colspan="5">
@@ -35,7 +34,7 @@
                         <td><button class="bt-calc">MR</button></td>
                         <td><button class="bt-calc">M+</button></td>
                         <td><button class="bt-calc">M-</button></td>
-                        <td><button class="bt-calc">AC/CE</button></td>
+                        <td><button class="bt-calc" id="bt-acce">AC/CE</button></td>
                     </tr>
 
                     <tr>
@@ -67,8 +66,8 @@
                         <td><button class="bt-calc">00</button></td>
                         <td><button class="bt-calc">.</button></td>
                     </tr>
-                </table>
-            </div>
+                    
+            </table>
         </main>
     </div>
 </body>
