--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                         <td><button class="bt-calc">1</button></td>
                         <td><button class="bt-calc">2</button></td>
                         <td><button class="bt-calc">3</button></td>
-                        <td rowspan="2"><button class="bt-calc">+</button></td>
-                        <td rowspan="2"><button class="bt-calc">=</button></td>
+                        <td rowspan="2"><button class="bt-calc" id="bt-plus">+</button></td>
+                        <td rowspan="2"><button class="bt-calc" id="bt-equal">=</button></td>
                     </tr>
 
                     <tr>
