--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
                     </tr>
 
                     <tr>
-                        <td><button class="bt-calc">BS</button></td>
+                        <td><button class="bt-calc">
+                            <i class="fas fa-long-arrow-alt-left"></i>
+                        </button></td>
                         <td><button class="bt-calc">MR</button></td>
                         <td><button class="bt-calc">M+</button></td>
                         <td><button class="bt-calc">M-</button></td>
