--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
                         <td colspan="5">
                             <div id="painel">
                                 <p id="txt_operadores">5 +</p>
-                                <p id="txt_operadores">0</p>
+                                <p id="txt_display">0</p>
                             </div>
                         </td>
                     </tr>
 
                     <tr>
-                        <td><button class="bt-calc"><i class="fas fa-long-arrow-alt-left"></i></button></td>
+                        <td><button class="bt-calc"><i class="fas fa-arrow-left"></i></button></td>
                         <td><button class="bt-calc">MR</button></td>
                         <td><button class="bt-calc">M+</button></td>
                         <td><button class="bt-calc">M-</button></td>
