--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculadora Matemática</title>
 
-    <link rel="stylesheet" href="tools/fontawesome/css/fontawesome.min.css">
+    <link rel="stylesheet" href="tools/fontawesome/css/all.css">
     <link rel="stylesheet" href="css/styles.css" />
     <script src="tools/jquery/jquery.min.js"></script>
     <script src="js/scripts.js"></script>
