--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <td colspan="5">
                             <div id="painel">
                                 <p id="txt_operadores">5 +</p>
-                                <p id="txt_display">0</p>
+                                <input type="text" id="txt_display" placeholder="0">
                             </div>
                         </td>
                     </tr>
