--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculadora Matemática</title>
 
-    <link rel="stylesheet" href="tools/fontawesome/css/all.css">
+    <link rel="stylesheet" href="tools/fontawesome/css/all.min.css" />
     <link rel="stylesheet" href="css/styles.css" />
+
     <script src="tools/jquery/jquery.min.js"></script>
     <script src="js/scripts.js"></script>
 
@@ -24,16 +25,16 @@
                         <td colspan="5">
                             <div id="painel">
                                 <p id="txt_operadores">5 +</p>
-                                <input type="text" id="txt_display" placeholder="0">
+                                <input type="text" id="txt_display" placeholder="0" />
                             </div>
                         </td>
                     </tr>
 
                     <tr>
-                        <td><button class="bt-calc"><i class="fas fa-arrow-left"></i></button></td>
-                        <td><button class="bt-calc">MR</button></td>
-                        <td><button class="bt-calc">M+</button></td>
-                        <td><button class="bt-calc">M-</button></td>
+                        <td><button class="bt-calc"><i class="fas fa-long-arrow-alt-left"></i></button></td>
+                        <td><button class="bt-calc" id="bt-op">MR</button></td>
+                        <td><button class="bt-calc"  id="bt-op">M+</button></td>
+                        <td><button class="bt-calc" id="bt-op">M-</button></td>
                         <td><button class="bt-calc" id="bt-acce">AC/CE</button></td>
                     </tr>
 
@@ -41,16 +42,16 @@
                         <td><button class="bt-calc">7</button></td>
                         <td><button class="bt-calc">8</button></td>
                         <td><button class="bt-calc">9</button></td>
-                        <td><button class="bt-calc">X</button></td>
-                        <td><button class="bt-calc">/</button></td>
+                        <td><button class="bt-calc" id="bt-mult">X</button></td>
+                        <td><button class="bt-calc" id="bt-div">/</button></td>
                     </tr>
 
                     <tr>
                         <td><button class="bt-calc">4</button></td>
                         <td><button class="bt-calc">5</button></td>
                         <td><button class="bt-calc">6</button></td>
-                        <td><button class="bt-calc">-</button></td>
-                        <td><button class="bt-calc">%</button></td>
+                        <td><button class="bt-calc" id="bt-minus">-</button></td>
+                        <td><button class="bt-calc" id="bt-perc">%</button></td>
                     </tr>
 
                     <tr>
