--- a/index.html
+++ b/index.html
@@ -42,24 +42,24 @@
                         <td><button class="bt-calc">7</button></td>
                         <td><button class="bt-calc">8</button></td>
                         <td><button class="bt-calc">9</button></td>
-                        <td><button class="bt-calc" id="bt-mult">X</button></td>
-                        <td><button class="bt-calc" id="bt-div">/</button></td>
+                        <td><button class="bt-calc" id="bt-mult"><i class="fas fa-times"></i></button></td>
+                        <td><button class="bt-calc" id="bt-div"><i class="fas fa-divide"></i></button></td>
                     </tr>
 
                     <tr>
                         <td><button class="bt-calc">4</button></td>
                         <td><button class="bt-calc">5</button></td>
                         <td><button class="bt-calc">6</button></td>
-                        <td><button class="bt-calc" id="bt-minus">-</button></td>
-                        <td><button class="bt-calc" id="bt-perc">%</button></td>
+                        <td><button class="bt-calc" id="bt-minus"><i class="fas fa-minus"></i></button></td>
+                        <td><button class="bt-calc" id="bt-perc"><i class="fas fa-percentage"></i></button></td>
                     </tr>
 
                     <tr>
                         <td><button class="bt-calc">1</button></td>
                         <td><button class="bt-calc">2</button></td>
                         <td><button class="bt-calc">3</button></td>
-                        <td rowspan="2"><button class="bt-calc" id="bt-plus">+</button></td>
-                        <td rowspan="2"><button class="bt-calc" id="bt-equal">=</button></td>
+                        <td rowspan="2"><button class="bt-calc" id="bt-plus"><i class="fas fa-plus"></i></button></td>
+                        <td rowspan="2"><button class="bt-calc" id="bt-equal"><i class="fas fa-equals"></i></button></td>
                     </tr>
 
                     <tr>
