--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <td colspan="5">
                             <div id="painel">
                                 <p id="txt_operadores">5 +</p>
-                                <input type="text" id="txt_display" placeholder="0" />
+                                <input type="text" id="txt_display" placeholder="0" maxlength="19"/>
                             </div>
                         </td>
                     </tr>
