--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
     <link rel="stylesheet" href="tools/fontawesome/css/all.min.css" />
     <link rel="stylesheet" href="css/styles.css" />
-
     <script src="tools/jquery/jquery.min.js"></script>
+    <script src="tools/jquery-mask/dist/jquery.mask.min.js"></script>
     <script src="js/scripts.js"></script>
 
 </head>
